MINOR Reverted removal of horizontal panel scrollbars from dc5e36ec, as it makes important content like nested tree nodes inaccessible. UI elements inside the panel should adjust to the available width if visually required instead (fixes #7347)

--- a/admin/scss/_style.scss
+++ b/admin/scss/_style.scss
@@ -651,7 +651,6 @@ body.cms {
 		width: ($grid-x * 22);
 		padding: 0 $grid-x;
 		overflow: auto;
-		overflow-x:hidden;
 		height:100%;
 		.dropdown select {
 			width:$grid-x * 20;
